[package]
name = "qeng"
version = "0.1.0"
authors = ["Matthew Kaminski <questiagame@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features= ["release_max_level_off"] }
wgpu = "0.16"
winit = "0.28.0"
pollster = "0.3.0"
bytemuck = {version = "1.13", features = ["derive"]}
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "4.0", features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
